--- a/package.json
+++ b/package.json
@@ -20,17 +20,14 @@
   },
   "homepage": "https://github.com/talensjr/feathersjs-gs#readme",
   "dependencies": {
-    "angular2": "^2.0.0-beta.0",
+    "angular2": "^2.0.0-beta.6",
     "body-parser": "^1.14.2",
-    "es6-promise": "^3.0.2",
+    "es6-promise": "^3.1.2",
     "es6-shim": "^0.33.13",
     "feathers": "^1.3.0",
     "feathers-client": "^0.5.0",
-    "reflect-metadata": "0.1.2",
-    "rx": "^4.0.7",
-    "rx-dom": "^7.0.3",
-    "rxjs": "^5.0.0-beta.0",
-    "systemjs": "^0.19.13",
-    "zone.js": "^0.5.10"
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "systemjs": "^0.19.22"
   }
 }
