--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   },
   "homepage": "https://github.com/talensjr/feathersjs-gs#readme",
   "dependencies": {
-    "angular2": "^2.0.0-beta.6",
+    "angular2": "2.0.0-beta.6",
     "body-parser": "^1.14.2",
-    "es6-promise": "^3.1.2",
-    "es6-shim": "^0.33.13",
+    "es6-promise": "3.1.2",
+    "es6-shim": "0.33.13",
     "feathers": "^1.3.0",
     "feathers-client": "^0.5.0",
-    "reflect-metadata": "^0.1.2",
+    "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
-    "systemjs": "^0.19.22"
+    "systemjs": "^0.19.22",
+    "zone.js": "0.5.14"
   }
 }
